--- a/package.json
+++ b/package.json
@@ -18,8 +18,14 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "npm run build & gh-pages -d build"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+github.com/Vlad-maker/Nootris.git"
+  },
+  "homepage": "https://vlad-maker.github.io/Nootris/",
   "eslintConfig": {
     "extends": [
       "react-app",
@@ -37,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^4.0.0"
   }
 }
